Add uavcan submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "src/cmp_mem_access"]
 	path = src/cmp_mem_access
 	url = https://github.com/Stapelzeiger/cmp_mem_access
+[submodule "uavcan"]
+	path = uavcan
+	url = https://github.com/cvra/uavcan.git
